TO DO: Compare datasets, statistics, distributions, correlations, etc.

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparing iPhone and Samunsung J series users"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,478 +33,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_dataset = pd.read_csv(\"device_db.csv\", sep=\",\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(input_dataset.columns)\n",
-    "\n",
-    "print(input_dataset.tail())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(input_dataset[\"BILLING_MONTH_1\"].dtype, input_dataset[\"BILLING_MONTH_1\"].nunique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize an empty list to store column information\n",
-    "column_info = []\n",
-    "\n",
-    "# Iterate through the columns of the DataFrame\n",
-    "for column in input_dataset.columns:\n",
-    "    column_info.append([column, input_dataset[column].dtype, input_dataset[column].nunique()])\n",
-    "\n",
-    "# Create DataFrame from the list of column information\n",
-    "column_type_df = pd.DataFrame(column_info, columns=['Column Name', 'Column Type', 'Distinct Elements'])\n",
-    "\n",
-    "print(column_type_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I first created an empty list to store the column statistics\n",
-    "\n",
-    "column_stats = []\n",
-    "\n",
-    "for columns in input_dataset.columns:\n",
-    "    if input_dataset[columns].dtype == 'float64':\n",
-    "        column_mean = input_dataset[columns].mean()\n",
-    "        column_median = input_dataset[columns].median()\n",
-    "        column_std = input_dataset[columns].std()\n",
-    "        column_min = input_dataset[columns].min()\n",
-    "        column_max = input_dataset[columns].max()\n",
-    "\n",
-    "        column_stats.append([columns, column_mean, column_median, column_std, column_min, column_max])\n",
-    "\n",
-    "stats_df = pd.DataFrame(column_stats, columns=['Column Name', 'Column Mean', 'Median', 'Column Standard Deviation', 'Column Minimum', 'Column Maximum'])\n",
-    "print(stats_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for columns in input_dataset.columns:\n",
-    "    describe = input_dataset[columns].describe()\n",
-    "    print(describe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats_df1 = input_dataset.describe()\n",
-    "stats_df1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First method\n",
-    "name:DEVICE_COST_MONTH_1\n",
-    "mean: 1.080778e+01\n",
-    "median: 0.000000e+00\n",
-    "std: 75.834602\n",
-    "min: 0.00\n",
-    "max: 6.440000e+03\n",
-    "\n",
-    "DESCRIBE() method\n",
-    "Name: DEVICE_COST_MONTH_1, dtype: float64\n",
-    "count    9998.000000\n",
-    "mean       10.587317\n",
-    "std        36.995965\n",
-    "min         0.000000\n",
-    "25%         0.000000\n",
-    "50%         0.000000\n",
-    "75%         0.620000\n",
-    "max      1360.000000\n",
-    "\n",
-    "The differences are: first the type of statistics we get. Second that there are a lot of statistical values that are different."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats_df1 = input_dataset[\"DEVICE_COST_MONTH_1\"].describe()\n",
-    "stats_df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_mean = input_dataset[\"DEVICE_COST_MONTH_1\"].mean()\n",
-    "column_median = input_dataset[\"DEVICE_COST_MONTH_1\"].median()\n",
-    "column_std = input_dataset[\"DEVICE_COST_MONTH_1\"].std()\n",
-    "column_min = input_dataset[\"DEVICE_COST_MONTH_1\"].min()\n",
-    "column_max = input_dataset[\"DEVICE_COST_MONTH_1\"].max()\n",
-    "print(column_mean, column_median, column_std, column_min, column_max)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "previous_device_brand_census = input_dataset[\"PREVIOUS_DEVICE_BRAND\"].value_counts()\n",
-    "print(previous_device_brand_census)\n",
-    "previous_device_model_census = input_dataset[\"PREVIOUS_DEVICE_MODEL\"].value_counts()\n",
-    "print(\"\\n\",previous_device_model_census)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nan_counter= input_dataset.isna()\n",
-    "nan_counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_dataset.info()\n",
-    "input_dataset.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clear_db = input_dataset\n",
-    "#for i in clear_db.columns:\n",
-    "#clear_db.dropna(subset=['PURCHASED_DEVICE','DEVICE_VALUE','PREVIOUS_DEVICE_MODEL'])\n",
-    "clear_db = clear_db.dropna(subset=['PURCHASED_DEVICE','DEVICE_VALUE','PREVIOUS_DEVICE_MODEL'])\n",
-    "#pd.DataFrame(clear_db)\n",
-    "clear_db.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_traffic = [col for col in clear_db.columns if (\"DATA_TRAFFIC\" in col) ]\n",
-    "voice_traffic = [col for col in clear_db.columns if (\"VOICE_TRAFFIC\" in col) ]\n",
-    "billing_month = [col for col in clear_db.columns if (\"BILLING_MONTH\" in col) ]\n",
-    "device_cost = [col for col in clear_db.columns if (\"DEVICE_COST\" in col) ]\n",
-    "columns_to_clear = data_traffic + voice_traffic+billing_month+device_cost\n",
-    "\n",
-    "for col in clear_db.columns:\n",
-    "    if col in columns_to_clear: \n",
-    "        clear_db[col] = clear_db[col].fillna(0) \n",
-    "clear_db.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(input_dataset.shape)\n",
-    "clear_db.shape\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variables = ['DEVICE_VALUE', 'VOICE_TRAFFIC_MONTH_1', 'VOICE_TRAFFIC_MONTH_2', 'VOICE_TRAFFIC_MONTH_3', 'BILLING_MONTH_2', 'DURATION_LINE']\n",
-    "\n",
-    "for var in variables:\n",
-    "    sns.histplot(data=clear_db, x=var, kde=False, alpha=0.7, label=var)\n",
-    "\n",
-    "    # Adding labels and title\n",
-    "    plt.xlabel('Value')\n",
-    "    plt.ylabel('Frequency')\n",
-    "    plt.title(var)\n",
-    "    # Adding legend\n",
-    "    plt.legend()\n",
-    "    # Showing plot\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#we transform the variable that is exponential\n",
-    "clear_db['log_var'] = clear_db['VOICE_TRAFFIC_MONTH_2'].apply(lambda x: np.log(x+1))\n",
-    "sns.histplot(data=clear_db, x='log_var', kde=False, alpha=0.7, label='VOICE_TRAFFIC_MONTH_2')\n",
-    "\n",
-    "# Adding labels and title\n",
-    "plt.xlabel('Value')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('VOICE_TRAFFIC_MONTH_2')\n",
-    "# Adding legend\n",
-    "plt.legend()\n",
-    "# Showing plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variables = [ 'VOICE_TRAFFIC_MONTH_2', 'DATA_TRAFFIC_MONTH_2', 'DURATION_LINE']\n",
-    "\n",
-    "for var in variables:\n",
-    "    clear_db[var].plot( kind = 'box')\n",
-    "\n",
-    "    # Adding labels and title\n",
-    "    plt.ylabel('Value')\n",
-    "    plt.title(var)\n",
-    "    # Adding legend\n",
-    "    plt.legend()\n",
-    "    # Showing plot\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_traffic = [col for col in clear_db.columns if (\"DATA_TRAFFIC\" in col) ]\n",
-    "voice_traffic = [col for col in clear_db.columns if (\"VOICE_TRAFFIC\" in col) ]\n",
-    "columns_to_clear = data_traffic + voice_traffic\n",
-    "df = clear_db[columns_to_clear]\n",
-    "#print(columns_to_cor)\n",
-    "correlation_matrix = df.corr()\n",
-    "print(correlation_matrix)\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.matshow(correlation_matrix, cmap='RdBu', fignum=1)\n",
-    "plt.colorbar(label='Correlation')\n",
-    "plt.xticks(np.arange(len(columns_to_clear)), columns_to_clear, rotation=45)\n",
-    "plt.yticks(np.arange(len(columns_to_clear)), columns_to_clear)\n",
-    "plt.title('Correlation Between Traffic Attributes, Duration Line, Billing, Device Cost, and Device Value')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.4\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "std_data_traffic_m_1 = clear_db\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# Extract the column and convert it into a 2D array-like object\n",
-    "data_traffic_month_1 = clear_db[[\"DATA_TRAFFIC_MONTH_1\"]]\n",
-    "scaler.fit(data_traffic_month_1)\n",
-    "\n",
-    "# Now, you can transform the column\n",
-    "std_data_traffic_m_1[\"DATA_TRAFFIC_MONTH_1\"] = scaler.transform(data_traffic_month_1)\n",
-    "#rint(std_data_traffic_m_1[\"DATA_TRAFFIC_MONTH_1\"])\n",
-    "std_data_traffic_m_1[\"DATA_TRAFFIC_MONTH_1\"].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "test_df = pd.DataFrame(clear_db)\n",
-    "test_df[\"DATA_TRAFFIC_MONTH_1\"] = StandardScaler().fit_transform(test_df[['DATA_TRAFFIC_MONTH_1']])\n",
-    "display(test_df['DATA_TRAFFIC_MONTH_1'])\n",
-    "test_df['DATA_TRAFFIC_MONTH_1'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.histplot(data= test_df, x=\"DATA_TRAFFIC_MONTH_1\", kde=False, alpha=0.7, label=var)\n",
-    "# Adding labels and title\n",
-    "plt.xlabel('DATA_TRAFFIC_MONTH_1')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Histogram')\n",
-    "# Adding legend\n",
-    "plt.legend()\n",
-    "# Showing plot\n",
-    "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df[\"DATA_TRAFFIC_MONTH_1\"] = MinMaxScaler().fit_transform(test_df[[\"DATA_TRAFFIC_MONTH_1\"]])\n",
-    "display(test_df['DATA_TRAFFIC_MONTH_1'])\n",
-    "test_df[\"DATA_TRAFFIC_MONTH_1\"].describe()\n",
-    "sns.histplot(data= test_df, x=\"DATA_TRAFFIC_MONTH_1\", kde=False, alpha=0.7, label=var)\n",
-    "# Adding labels and title\n",
-    "plt.xlabel('DATA_TRAFFIC_MONTH_1')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Histogram')\n",
-    "# Adding legend\n",
-    "plt.legend()\n",
-    "# Showing plot\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brand_int = pd.DataFrame(clear_db, columns = [\"PREVIOUS_DEVICE_BRAND\"])\n",
-    "brand_int[\"brand_encoded\"] = LabelEncoder().fit_transform(brand_int['PREVIOUS_DEVICE_BRAND'])\n",
-    "display(brand_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manuf_bin = pd.DataFrame(clear_db, columns = [\"PREVIOUS_DEVICE_MANUF\"])\n",
-    "manuf_bin[\"PREVIOUS_DEVICE_MANUF_BIN\"]= LabelEncoder().fit_transform(manuf_bin['PREVIOUS_DEVICE_MANUF'])\n",
-    "display(manuf_bin)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.7\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "text_parsing_df = pd.DataFrame(clear_db)\n",
-    "text_parsing_df = test_df['PURCHASED_DEVICE'].str.split('_', expand=True)\n",
-    "print(text_parsing_df)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df, test_df = train_test_split(clear_db, test_size=0.3, random_state=42)\n",
-    "train_df.info()\n",
-    "test_df.info()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Comparing iPhone and Samunsung J series users"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -508,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,18 +118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0\n",
+       "1       0\n",
+       "2       0\n",
+       "3       0\n",
+       "4       0\n",
+       "       ..\n",
+       "9995    0\n",
+       "9996    0\n",
+       "9997    0\n",
+       "9998    0\n",
+       "9999    0\n",
+       "Name: brand_code, Length: 9690, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "brand_code = []\n",
     "for name in database[\"PURCHASED_DEVICE\"]:\n",
     "    #print(name)\n",
     "    brand = extract_brand(str(name))\n",
     "    brand_code.append(brand)\n",
-    "\n",
-    "database[\"brand_code\"] = brand_code\n",
-    "database[\"brand_code\"] \n"
+    " "
    ]
   },
   {
@@ -606,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
